# rust-zerotoproduction

./: Cargo.toml
configuration/: configuration.yaml
scripts/: init_db.sh
src/: configuration.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
