[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

[target.x86_64-apple-darwin]
rustflags = ["-C", "link-arg=-fuse-ld=/usr/local/bin/zld"]

[lib]
path="src/lib.rs"

[binary]
path="src/main.rs"
name="zero2prod"

[dependencies]
actix-web = "4"
chrono = "0.4.42"
config = "0.15.19"
reqwest = "0.12.28"
serde = { version = "1.0.228", features = ["derive"]}
sqlx = { version = "0.8.6", default-features = false, features = [
    "runtime-tokio-rustls",  
    "macros", 
    "postgres", 
    "uuid", 
    "chrono", 
    "migrate" 
] }
uuid = { version = "1", features = ["v4"] }
